# bulk_thr

./: CMakeLists.txt
src/: controlsData.cpp  main.cpp
src/includes/: controlsData.hpp  dataTime.hpp  outConsole.hpp  procesData.hpp  writeFile.hpp
src/models/: dataTime.cpp  outConsole.cpp  procesData.cpp  writeFile.cpp
